# quantum-c

./: CMakeLists.txt  README.md
docs/: threat_model.md
include/quantumc/: qc_kem.h  qc_session.h
src/: qc_session.c
tests/: test_session.c
